--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,38 @@
+autoflake==2.3.1
+black==25.1.0
+cfgv==3.4.0
+click==8.2.1
+distlib==0.3.9
+exceptiongroup==1.3.0
 Faker==37.3.0
+filelock==3.18.0
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 grpcio-status==1.71.0
+identify==2.6.12
+iniconfig==2.1.0
+isort==6.0.1
+mypy_extensions==1.1.0
+nodeenv==1.9.1
 numpy==2.2.6
+packaging==25.0
 pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
+pre_commit==4.2.0
 protobuf==5.29.4
 py4j==0.10.9.7
 pyarrow==20.0.0
 pydicom==3.0.1
+pyflakes==3.3.2
 pyspark==4.0.0.dev1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.2
 six==1.17.0
+tomli==2.2.1
+typing_extensions==4.13.2
 tzdata==2025.2
+virtualenv==20.31.2
